# GOB

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  TODO.md  extensions.py  genindex.html  gob.html  index.html  invgamma.ipynb  local_compile.sh  main.py  model.lp  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  run_alphas.py  run_alphas.sh  run_sigmas.py  search.html  searchindex.js  setup.py  t.py  test.ipynb  test.py  test2.py  test_gob_tools.py  test_optimizers.py  test_rand_fun.py  visual_exp.ipynb
.github/workflows/: build.yml  build_doc.yml
GO-Benchmark/: benchmark.py
GO-Benchmark/optims/: SBS_particles.py
GO-Benchmark/utils/: difficulty.py  load_algo.py  load_function.py  utils.py
_sources/: gob.rst.txt  index.rst.txt
docs/: conf.py  gen_doc_files.py  index.rst  quickstart.md  requirements.txt
docs/_static/: style.css
docs/source/: gob.benchmarks.rst  gob.metrics.rst  gob.optimizers.rst  gob.rst
exps/: CBO.py  CBO_in.py  CBO_no_in.py  GD.py  Langevin.py  Langevin_in.py  Langevin_no_in.py  MSGD.py  PSO.py  RKHS.py  SBS.py  impact_noise.ipynb  langevin_vs_sbs.py  langevin_vs_sbs.sh  langevin_vs_sbs_vs_cn.py  langevin_vs_sbs_vs_cn.sh  run_betas.py  run_betas.sh  run_sigmas.py  run_sigmas.sh  sbs_vs_cn_vs_rkhs.py  sbs_vs_cn_vs_rkhs.sh  utils.py  visual_exp.ipynb
exps/notebooks/: RKHS.ipynb  impact_noise.ipynb  visual_exp.ipynb
exps/results/: tabs.tex
exps/slurm/: CBO.sh  CBO_in.sh  CBO_no_in.sh  GD.sh  Langevin.sh  Langevin_in.sh  Langevin_no_in.sh  MSGD.sh  PSO.sh  RKHS.sh  SBS.sh
gob/: __init__.py  create_bounds.py  gob.py
gob/benchmarks/: __init__.py  ackley.py  benchmark.py  bentcigar.py  create_bounds.py  deb.py  dixonprice.py  gkls.py  griewank.py  hyperellipsoid.py  langermann.py  levy.py  michalewicz.py  pygkls.py  rastrigin.py  rosenbrock.py  schwefel.py  square.py  styblinskitang.py  sumcumsum.py  sumpow.py  trid.py  zakharov.py
gob/metrics/: __init__.py  f_target.py  proportion.py
gob/optimizers/: AdaLIPO_P.py  AdaRankOpt.py  BayesOpt.py  CBO.py  CMA_ES.py  CN_Langevin.py  CRS.py  Direct.py  ECP.py  Langevin.py  MLSL.py  PRS.py  PSO.py  RKHS.py  SBS.py  SBS_RKHS.py  __init__.py  cpp_optimizer.py  gradient_descent.py  optimizer.py
gob/optimizers/cpp_optimizers/: CMakeLists.txt  cpp_optimizers.pyx
gob/optimizers/cpp_optimizers/include/: AdaLIPO_P.hh  AdaRankOpt.hh  CBO.hh  CMA_ES.hh  ECP.hh  PRS.hh  PolynomialFeatures.hh  SBS.hh  Simplex.hh  bobyqa.hh  optimizer.hh  particles_optimizer.hh  trust_regions.hh  utils.hh
gob/optimizers/cpp_optimizers/include/optimizers/: CMA_ES.hh  PRS.hh  optimizer.hh
gob/optimizers/cpp_optimizers/include/optimizers/decision/: AdaLIPO_P.hh  AdaRankOpt.hh  ECP.hh
gob/optimizers/cpp_optimizers/include/optimizers/particles/: Adam.hh  CBO.hh  Full_Noise.hh  Langevin.hh  PSO.hh  RKHS.hh  SBS.hh  SBS_RKHS.hh  noise.hh  particles_optimizer.hh  particles_utils.hh  schedulers.hh
gob/optimizers/cpp_optimizers/include/optimizers/particles/common-noise/: CN_CBO.hh  CN_Langevin.hh  CN_SBS.hh  Langevin.hh  common_noise.hh  common_noise_utils.hh
gob/optimizers/cpp_optimizers/include/optimizers/particles/common-noise/GCN/: GCN.hh  GCN_CBO.hh  GCN_Langevin.hh  GCN_PSO.hh  GCN_SBS.hh
gob/optimizers/cpp_optimizers/include/optimizers/particles/common-noise/SMD/: SMD.hh  SMD_CBO.hh  SMD_Langevin.hh  SMD_PSO.hh  SMD_SBS.hh
gob/optimizers/cpp_optimizers/src/: AdaLIPO_P.cc  AdaRankOpt.cc  Adam.cc  CBO.cc  CMA_ES.cc  ECP.cc  PRS.cc  PolynomialFeatures.cc  SBS.cc  Simplex.cc  bobyqa.cc  noise.cc  optimizer.cc  particles_optimizer.cc  trust_regions.cc  utils.cc
gob/optimizers/cpp_optimizers/src/bobyqa/: bobyqa.cpp
gob/optimizers/cpp_optimizers/src/optimizers/particles/: Adam.cc  CBO.cc  Full_Noise.cc  Langevin.cc  PSO.cc  RKHS.cc  SBS.cc  SBS_RKHS.cc  noise.cc  particles_optimizer.cc  particles_utils.cc
gob/optimizers/cpp_optimizers/src/optimizers/particles/common-noise/: CN_CBO.cc  CN_Langevin.cc  CN_SBS.cc  Langevin.cc  common_noise.cc  common_noise_utils.cc
gob/optimizers/cpp_optimizers/src/optimizers/particles/common-noise/GCN/: GCN.cc  GCN_CBO.cc  GCN_Langevin.cc  GCN_PSO.cc  GCN_SBS.cc
gob/optimizers/cpp_optimizers/src/optimizers/particles/common-noise/SMD/: SMD.cc  SMD_CBO.cc  SMD_Langevin.cc  SMD_PSO.cc  SMD_SBS.cc  SMD_utils.cc
gob/utils/: __init__.py  print_table.py
optimizers/: CMakeLists.txt  example.cc  extensions.py  local_compile.sh  optimizers.cc  optimizers.pyx  pyproject.toml  requirements.txt  setup.py  tasks.py  test.py
optimizers/include/: AdaLIPO_P.hh  CMA_ES.hh  PRS.hh  optimizer.hh  utils.hh
optimizers/include/libcmaes/: eigenmvn.h  eo_matrix.h
optimizers/src/: AdaLIPO_P.cc  CMA_ES.cc  PRS.cc  example.cc  optimizer.cc  utils.cc
pkg/: create_bounds.py  gob.py
pkg/benchmarks/: __init__.py  benchmark.py  estimate_gradient.py  function.py  square.py
pkg/metrics/: __init__.py  metric.py  proportion.py
pkg/optimizers/: AdaLIPO_P.py  AdaRankOpt.py  CMA_ES.py  PRS.py  __init__.py  gradient_descent.py  optimizer.py
pkg/utils/: __init__.py  print_table.py
source/benchmarks/: gob.Ackley.html  gob.Bentcigar.html  gob.Deb.html  gob.Dixonprice.html  gob.Griewank.html  gob.Hyperellipsoid.html  gob.Langermann.html  gob.Levy.html  gob.Michalewicz.html  gob.PyGKLS.html  gob.Rastrigin.html  gob.Rosenbrock.html  gob.Schwefel.html  gob.Square.html  gob.Styblinskitang.html  gob.Sumpow.html  gob.Trid.html  gob.Zakharov.html  index.html
source/metrics/: gob.Proportion.html  gob.f_target.html  index.html
source/optimizers/: gob.AdaLIPO_P.html  gob.AdaRankOpt.html  gob.BayesOpt.html  gob.CBO.html  gob.CMA_ES.html  gob.CRS.html  gob.Direct.html  gob.ECP.html  gob.Full_Noise.html  gob.GCN_CBO.html  gob.GCN_Langevin.html  gob.GCN_MSGD.html  gob.GCN_PSO.html  gob.GCN_SBS.html  gob.GD.html  gob.Langevin.html  gob.MLSL.html  gob.MSGD.html  gob.PRS.html  gob.PSO.html  gob.SBS.html  gob.SMD_CBO.html  gob.SMD_Langevin.html  gob.SMD_MSGD.html  gob.SMD_PSO.html  gob.SMD_SBS.html  gob.WOA.html  index.html
tests/: test_gob_tools.py  test_optimizers.py
(+123 files in other folders)
