[project]
name = "gob"
version = "0.0.1"
dependencies = [
  "numpy==2.1.3",
  "Cython==3.0.11",
  "nlopt==2.9.0",
  "prettytable==3.10.2",
  "bayesian-optimization==1.5.1",
  "gkls",
]

[project.urls]
Repository = "https://github.com/gaetanserre/GOB"

[build-system]
requires = ["setuptools", "toml", "numpy==2.1.3", "Cython==3.0.11"]
