[project]
authors = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
]
maintainers = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
]
name = "gob"
version = "0.0.1"
dependencies = [
  "numpy==2.1.3",
  "Cython==3.0.11",
  "nlopt==2.9.0",
  "prettytable==3.10.2",
  "bayesian-optimization==1.5.1",
  "gkls",
]
description = "A collection of global optimization algorithms implemented in C++ and linked with Python."
readme = "README.md"

[project.urls]
Repository = "https://github.com/gaetanserre/GOB"

[build-system]
requires = ["setuptools", "toml", "numpy==2.1.3", "Cython==3.0.11"]
