[project]
name = "optimizers"
version = "0.1.0"
dependencies = ["numpy==2.1.3", "Cython==3.0.11"]

[build-system]
requires = ["setuptools", "numpy==2.1.3", "Cython==3.0.11"]

[tool.setuptools.packages.find]
where = ["src", "include"]

[tool.setuptools.exclude-package-data]
optimizers = ["optimizers.cc"]
